--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,18 @@ server.port=${PORT:8080}
 logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
 
+vaadin.exclude-urls=/api/**
+
+app.date.format=dd.MM.yyyy
+
 # Launch the default browser when starting the application in development mode
 vaadin.launch-browser=false
 # To improve the performance during development.
 # For more information https://vaadin.com/docs/latest/integrations/spring/configuration#special-configuration-parameters
 vaadin.allowed-packages = com.vaadin,org.vaadin,com.example.application
 spring.jpa.defer-datasource-initialization = true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+spring.security.user.name = admin
+spring.security.user.password = admin
