--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ app.date.format=dd.MM.yyyy
 
 # Launch the default browser when starting the application in development mode
 vaadin.launch-browser=false
+vaadin.devmode.devTools.enabled=false
 # To improve the performance during development.
 # For more information https://vaadin.com/docs/latest/integrations/spring/configuration#special-configuration-parameters
 vaadin.allowed-packages = com.vaadin,org.vaadin,com.example.application
