--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,7 @@ spring.jpa.show-sql=true
 
 spring.security.user.name = admin
 spring.security.user.password = admin
+
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.tool.hbm2ddl=DEBUG
